<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextView"
                android:text="@string/activity_editor_tv_name" />

            <EditText
                android:id="@+id/activity_editor_edt_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextView"
                android:text="@string/activity_editor_author" />

            <EditText
                android:id="@+id/activity_editor_edt_author"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextView"
                android:text="@string/activity_editor_publisher" />

            <EditText
                android:id="@+id/activity_editor_edt_publisher"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextView"
                android:text="@string/activity_editor_category" />

            <Spinner
                android:id="@+id/activity_editor_spi_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextView"
                android:text="@string/activity_editor_intro" />

            <EditText
                android:id="@+id/activity_editor_edt_intro"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>